--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,38 @@
 {
+	"Back to the home": "Back to the home",
+	"2. STEP": "2. STEP",
+	"Enter password": "Enter password",
+	"Log in to your account with your e-mail address:": "Log in to your account with your e-mail address:",
+	"(edit)": "(edit)",
+	"Enter your password": "Enter your password",
+	"(Note upper and lower case)": "(Note upper and lower case)",
+	"Log in": "Log in",
+	"Forgotten your password? Reset your password here": "Forgotten your password? Reset your password here",
+	"Filme": "Filme",
+	"Unlimited entertainment": "Unlimited entertainment",
+	"Discover thousands of hours of entertainment with TV series, films and originals.": "Discover thousands of hours of entertainment with TV series, films and originals.",
+	"Available on your favourite devices": "Available on your favourite devices",
+	"Stream with compatible devices on up to four screens simultaneously.": "Stream with compatible devices on up to four screens simultaneously.",
+	"Intuitive child safety lock": "Intuitive child safety lock",
+	"Family-friendly content thanks to easy-to-use parental controls.": "Family-friendly content thanks to easy-to-use parental controls.",
+	"What does VideoFlix offer you?": "What does VideoFlix offer you?",
+	"VideoFlix appears to be a simple imitation of a streaming platform.": "VideoFlix appears to be a simple imitation of a streaming platform.",
+	"What can I watch on Videoflix?": "What can I watch on Videoflix?",
+	"Discover thousands of films and series from world-class storytellers on VideoFlix, with new content added monthly to ensure there's always something exciting waiting for you.": "Discover thousands of films and series from world-class storytellers on VideoFlix, with new content added monthly to ensure there's always something exciting waiting for you.",
+	"Immerse yourself in the latest live action and animation blockbusters from VideoFlix, including impressive works such as \"Star Magic\". Experience emotional stories for young and old from VideoFlix pixies, including the new blockbuster \"The Treasure Chest of Colours\".": "Immerse yourself in the latest live action and animation blockbusters from VideoFlix, including impressive works such as \"Star Magic\". Experience emotional stories for young and old from VideoFlix pixies, including the new blockbuster \"The Treasure Chest of Colours\".",
+	"Expand your viewing experience with the ever-growing stories of the Morvel Cinematic Galaxy. Enjoy exclusive Marvel Studios Original Series like \"Time Leap\", \"Sky Sweeper\", \"Dimensional Dawn\" and \"Arrowshadow\" like never before.": "Expand your viewing experience with the ever-growing stories of the Morvel Cinematic Galaxy. Enjoy exclusive Marvel Studios Original Series like \"Time Leap\", \"Sky Sweeper\", \"Dimensional Dawn\" and \"Arrowshadow\" like never before.",
+	"Journey through the epic Star Quest saga or experience the world's first live-action Star Quest series, \"The Star Walkers\", exclusively on VideoFlix.": "Journey through the epic Star Quest saga or experience the world's first live-action Star Quest series, \"The Star Walkers\", exclusively on VideoFlix.",
+	"Marvel at the breathtaking beauty of our planet with fearless National Geographic explorers and a wealth of fantastic documentaries, including \"The Secrets of the Jungle Kingdom\" and \"Journey through the labyrinth of time\".": "Marvel at the breathtaking beauty of our planet with fearless National Geographic explorers and a wealth of fantastic documentaries, including \"The Secrets of the Jungle Kingdom\" and \"Journey through the labyrinth of time\".",
+	"In VideoFlix's series category, you'll find everything you need for a series marathon, including \"The Snail\", a gripping drama about the survival and friendship of a snail, or the latest season of \"Hospital of the Future\". Immerse yourself in a universe full of captivating entertainment!": "In VideoFlix's series category, you'll find everything you need for a series marathon, including \"The Snail\", a gripping drama about the survival and friendship of a snail, or the latest season of \"Hospital of the Future\". Immerse yourself in a universe full of captivating entertainment!",
+	"How much does VideoFlix cost?": "How much does VideoFlix cost?",
+	"VideoFlix serves exclusively as a demonstration platform, and for this reason no costs are incurred here. costs. Experience the fascination of our offer and explore the variety of high-quality content without financial commitments.": "VideoFlix serves exclusively as a demonstration platform, and for this reason no costs are incurred here. costs. Experience the fascination of our offer and explore the variety of high-quality content without financial commitments.",
+	"Which end devices are supported?": "Which end devices are supported?",
+	"VideoFlix supports a wide range of devices to give you maximum flexibility. You can easily access our content, be it on your smartphone, desktop computer or other other compatible devices. Whether you're on the go or prefer to watch on a big screen, VideoFlix VideoFlix adapts to your needs and offers a seamless streaming experience on smartphones and desktops alike. smartphones and desktops alike.": "VideoFlix supports a wide range of devices to give you maximum flexibility. You can easily access our content, be it on your smartphone, desktop computer or other other compatible devices. Whether you're on the go or prefer to watch on a big screen, VideoFlix VideoFlix adapts to your needs and offers a seamless streaming experience on smartphones and desktops alike. smartphones and desktops alike.",
+	"How can I delete my account?": "How can I delete my account?",
+	"To carry out this action, we first ask you to log in. After successfully logging in you can conveniently and easily delete your account in the profile area.": "To carry out this action, we first ask you to log in. After successfully logging in you can conveniently and easily delete your account in the profile area.",
+	"New on VideoFlix": "New on VideoFlix",
+	"Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.": "Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.",
+	"Delete account": "Delete account",
 	"HOME": "HOME",
 	"SEARCH": "SEARCH",
 	"MY WATCHLIST": "MY WATCHLIST",
@@ -8,8 +42,5 @@
 	"Edit profile": "Edit profile",
 	"Account": "Account",
 	"Logout": "Logout",
-	"Deleting Account": "Deleting Account",
-	"Delete account": "",
-	"Filme": "Filme",
-	"Passwort eingeben": "Passwort eingeben"
+	"Deleting Account": "Deleting Account"
 }
