--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,15 +1,46 @@
 {
+	"Back to the home": "Zurück zum Start",
+	"2. STEP": "2. SCHRITT",
+	"Enter password": "Passwort eingeben",
+	"Log in to your account with your e-mail address:": "Mit Ihrer E-Mail-Adresse anmelden:",
+	"(edit)": "(bearbeiten)",
+	"Enter your password": "Geben Sie Ihr Passwort ein",
+	"(Note upper and lower case)": "(Beachten Sie Groß- und Kleinschreibung)",
+	"Log in": "Anmelden",
+	"Forgotten your password? Reset your password here": "Passwort vergessen? Setzen Sie Ihr Passwort hier zurück",
+	"Filme": "Filme",
+	"Unlimited entertainment": "Unbegrenztes Entertainment",
+	"Discover thousands of hours of entertainment with TV series, films and originals.": "Entdecken Sie Tausende Stunden Unterhaltung mit TV-Serien, Filmen und Originalen.",
+	"Available on your favourite devices": "Verfügbar auf Ihren Lieblingsgeräten",
+	"Stream with compatible devices on up to four screens simultaneously.": "Streamen Sie mit kompatiblen Geräten gleichzeitig auf bis zu vier Bildschirmen.",
+	"Intuitive child safety lock": "Intuitiver Kindersicherungsmechanismus",
+	"Family-friendly content thanks to easy-to-use parental controls.": "Familienfreundlicher Inhalt dank leicht zu bedienender Kindersicherung.",
+	"What does VideoFlix offer you?": "Was bietet Ihnen VideoFlix?",
+	"VideoFlix appears to be a simple imitation of a streaming platform.": "VideoFlix scheint eine einfache Nachahmung einer Streaming-Plattform zu sein.",
+	"What can I watch on Videoflix?": "Was kann ich auf Videoflix sehen?",
+	"Discover thousands of films and series from world-class storytellers on VideoFlix, with new content added monthly to ensure there's always something exciting waiting for you.": "Entdecken Sie Tausende von Filmen und Serien von erstklassigen Geschichtenerzählern auf VideoFlix, mit monatlich hinzugefügtem neuen Inhalt, um sicherzustellen, dass immer etwas Spannendes auf Sie wartet.",
+	"Immerse yourself in the latest live action and animation blockbusters from VideoFlix, including impressive works such as \"Star Magic\". Experience emotional stories for young and old from VideoFlix pixies, including the new blockbuster \"The Treasure Chest of Colours\".": "Tauchen Sie ein in die neuesten Live-Action- und Animationsblockbuster von VideoFlix, einschließlich beeindruckender Werke wie \"Star Magic\". Erleben Sie emotionale Geschichten für Jung und Alt von den VideoFlix-Pixies, darunter der neue Blockbuster \"Die Schatztruhe der Farben\".",
+	"Expand your viewing experience with the ever-growing stories of the Morvel Cinematic Galaxy. Enjoy exclusive Marvel Studios Original Series like \"Time Leap\", \"Sky Sweeper\", \"Dimensional Dawn\" and \"Arrowshadow\" like never before.": "Erweitern Sie Ihr Seherlebnis mit den stetig wachsenden Geschichten der Morvel Cinematic Galaxy. Genießen Sie exklusive Marvel Studios Original-Serien wie \"Time Leap\", \"Sky Sweeper\", \"Dimensional Dawn\" und \"Arrowshadow\" wie nie zuvor.",
+	"Journey through the epic Star Quest saga or experience the world's first live-action Star Quest series, \"The Star Walkers\", exclusively on VideoFlix.": "Begeben Sie sich auf die epische Star Quest-Saga oder erleben Sie die weltweit erste Live-Action-Star Quest-Serie, \"Die Sternenwanderer\", exklusiv auf VideoFlix.",
+	"Marvel at the breathtaking beauty of our planet with fearless National Geographic explorers and a wealth of fantastic documentaries, including \"The Secrets of the Jungle Kingdom\" and \"Journey through the labyrinth of time\".": "Bestaunen Sie die atemberaubende Schönheit unseres Planeten mit furchtlosen National Geographic-Entdeckern und einer Fülle fantastischer Dokumentationen, darunter \"Die Geheimnisse des Dschungelkönigreichs\" und \"Reise durch das Labyrinth der Zeit\".",
+	"In VideoFlix's series category, you'll find everything you need for a series marathon, including \"The Snail\", a gripping drama about the survival and friendship of a snail, or the latest season of \"Hospital of the Future\". Immerse yourself in a universe full of captivating entertainment!": "In der Serienkategorie von VideoFlix finden Sie alles, was Sie für einen Serienmarathon benötigen, einschließlich \"Die Schnecke\", einem fesselnden Drama über das Überleben und die Freundschaft einer Schnecke, oder der neuesten Staffel von \"Krankenhaus der Zukunft\". Tauchen Sie ein in ein Universum voller fesselnder Unterhaltung!",
+	"How much does VideoFlix cost?": "Wie viel kostet VideoFlix?",
+	"VideoFlix serves exclusively as a demonstration platform, and for this reason no costs are incurred here. costs. Experience the fascination of our offer and explore the variety of high-quality content without financial commitments.": "VideoFlix dient ausschließlich als Demonstrationsplattform, und aus diesem Grund entstehen hier keine Kosten. Erleben Sie die Faszination unseres Angebots und erkunden Sie die Vielfalt hochwertiger Inhalte ohne finanzielle Verpflichtungen.",
+	"Which end devices are supported?": "Welche Endgeräte werden unterstützt?",
+	"VideoFlix supports a wide range of devices to give you maximum flexibility. You can easily access our content, be it on your smartphone, desktop computer or other other compatible devices. Whether you're on the go or prefer to watch on a big screen, VideoFlix VideoFlix adapts to your needs and offers a seamless streaming experience on smartphones and desktops alike. smartphones and desktops alike.": "VideoFlix unterstützt eine Vielzahl von Geräten, um Ihnen maximale Flexibilität zu bieten. Sie können einfach auf unsere Inhalte zugreifen, sei es auf Ihrem Smartphone, Desktop-Computer oder anderen kompatiblen Geräten. Egal, ob Sie unterwegs sind oder lieber auf einem großen Bildschirm schauen, VideoFlix passt sich Ihren Bedürfnissen an und bietet ein nahtloses Streaming-Erlebnis auf Smartphones und Desktops gleichermaßen.",
+	"How can I delete my account?": "Wie kann ich mein Konto löschen?",
+	"To carry out this action, we first ask you to log in. After successfully logging in you can conveniently and easily delete your account in the profile area.": "Um diese Aktion durchzuführen, bitten wir Sie zunächst um eine Anmeldung. Nach erfolgreichem Anmelden können Sie Ihr Konto bequem und einfach im Profilbereich löschen.",
+	"New on VideoFlix": "Neu auf VideoFlix",
+	"Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.": "Einzigartige Filme, Serien und Originale, die exklusiv auf unserer Plattform erhältlich sind und sich von anderen Streaming-Diensten abheben.",
+	"Delete account": "Konto löschen",
 	"HOME": "STARTSEITE",
-	"SEARCH": "SUCHEN",
-	"MY WATCHLIST": "MEINE LISTE",
+	"SEARCH": "SUCHE",
+	"MY WATCHLIST": "MEINE WATCHLISTE",
 	"MOVIES": "FILME",
 	"SERIES": "SERIEN",
 	"My uploads": "Meine Uploads",
-	"Edit profile": "Profil",
+	"Edit profile": "Profil bearbeiten",
 	"Account": "Konto",
-	"Logout": "Logout",
-	"Deleting Account": "Konto löschen",
-	"Delete account": "",
-	"Filme": "Filme",
-	"Passwort eingeben": "Passwort eingeben"
+	"Logout": "Abmelden",
+	"Deleting Account": "Konto löschen"
 }
