--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,46 +1,148 @@
 {
-	"Back to the home": "Zurück zum Start",
-	"2. STEP": "2. SCHRITT",
-	"Enter password": "Passwort eingeben",
-	"Log in to your account with your e-mail address:": "Mit Ihrer E-Mail-Adresse anmelden:",
-	"(edit)": "(bearbeiten)",
-	"Enter your password": "Geben Sie Ihr Passwort ein",
-	"(Note upper and lower case)": "(Beachten Sie Groß- und Kleinschreibung)",
-	"Log in": "Anmelden",
-	"Forgotten your password? Reset your password here": "Passwort vergessen? Setzen Sie Ihr Passwort hier zurück",
-	"Filme": "Filme",
-	"Unlimited entertainment": "Unbegrenztes Entertainment",
-	"Discover thousands of hours of entertainment with TV series, films and originals.": "Entdecken Sie Tausende Stunden Unterhaltung mit TV-Serien, Filmen und Originalen.",
-	"Available on your favourite devices": "Verfügbar auf Ihren Lieblingsgeräten",
-	"Stream with compatible devices on up to four screens simultaneously.": "Streamen Sie mit kompatiblen Geräten gleichzeitig auf bis zu vier Bildschirmen.",
-	"Intuitive child safety lock": "Intuitiver Kindersicherungsmechanismus",
-	"Family-friendly content thanks to easy-to-use parental controls.": "Familienfreundlicher Inhalt dank leicht zu bedienender Kindersicherung.",
-	"What does VideoFlix offer you?": "Was bietet Ihnen VideoFlix?",
-	"VideoFlix appears to be a simple imitation of a streaming platform.": "VideoFlix scheint eine einfache Nachahmung einer Streaming-Plattform zu sein.",
-	"What can I watch on Videoflix?": "Was kann ich auf Videoflix sehen?",
-	"Discover thousands of films and series from world-class storytellers on VideoFlix, with new content added monthly to ensure there's always something exciting waiting for you.": "Entdecken Sie Tausende von Filmen und Serien von erstklassigen Geschichtenerzählern auf VideoFlix, mit monatlich hinzugefügtem neuen Inhalt, um sicherzustellen, dass immer etwas Spannendes auf Sie wartet.",
-	"Immerse yourself in the latest live action and animation blockbusters from VideoFlix, including impressive works such as \"Star Magic\". Experience emotional stories for young and old from VideoFlix pixies, including the new blockbuster \"The Treasure Chest of Colours\".": "Tauchen Sie ein in die neuesten Live-Action- und Animationsblockbuster von VideoFlix, einschließlich beeindruckender Werke wie \"Star Magic\". Erleben Sie emotionale Geschichten für Jung und Alt von den VideoFlix-Pixies, darunter der neue Blockbuster \"Die Schatztruhe der Farben\".",
-	"Expand your viewing experience with the ever-growing stories of the Morvel Cinematic Galaxy. Enjoy exclusive Marvel Studios Original Series like \"Time Leap\", \"Sky Sweeper\", \"Dimensional Dawn\" and \"Arrowshadow\" like never before.": "Erweitern Sie Ihr Seherlebnis mit den stetig wachsenden Geschichten der Morvel Cinematic Galaxy. Genießen Sie exklusive Marvel Studios Original-Serien wie \"Time Leap\", \"Sky Sweeper\", \"Dimensional Dawn\" und \"Arrowshadow\" wie nie zuvor.",
-	"Journey through the epic Star Quest saga or experience the world's first live-action Star Quest series, \"The Star Walkers\", exclusively on VideoFlix.": "Begeben Sie sich auf die epische Star Quest-Saga oder erleben Sie die weltweit erste Live-Action-Star Quest-Serie, \"Die Sternenwanderer\", exklusiv auf VideoFlix.",
-	"Marvel at the breathtaking beauty of our planet with fearless National Geographic explorers and a wealth of fantastic documentaries, including \"The Secrets of the Jungle Kingdom\" and \"Journey through the labyrinth of time\".": "Bestaunen Sie die atemberaubende Schönheit unseres Planeten mit furchtlosen National Geographic-Entdeckern und einer Fülle fantastischer Dokumentationen, darunter \"Die Geheimnisse des Dschungelkönigreichs\" und \"Reise durch das Labyrinth der Zeit\".",
-	"In VideoFlix's series category, you'll find everything you need for a series marathon, including \"The Snail\", a gripping drama about the survival and friendship of a snail, or the latest season of \"Hospital of the Future\". Immerse yourself in a universe full of captivating entertainment!": "In der Serienkategorie von VideoFlix finden Sie alles, was Sie für einen Serienmarathon benötigen, einschließlich \"Die Schnecke\", einem fesselnden Drama über das Überleben und die Freundschaft einer Schnecke, oder der neuesten Staffel von \"Krankenhaus der Zukunft\". Tauchen Sie ein in ein Universum voller fesselnder Unterhaltung!",
-	"How much does VideoFlix cost?": "Wie viel kostet VideoFlix?",
-	"VideoFlix serves exclusively as a demonstration platform, and for this reason no costs are incurred here. costs. Experience the fascination of our offer and explore the variety of high-quality content without financial commitments.": "VideoFlix dient ausschließlich als Demonstrationsplattform, und aus diesem Grund entstehen hier keine Kosten. Erleben Sie die Faszination unseres Angebots und erkunden Sie die Vielfalt hochwertiger Inhalte ohne finanzielle Verpflichtungen.",
-	"Which end devices are supported?": "Welche Endgeräte werden unterstützt?",
-	"VideoFlix supports a wide range of devices to give you maximum flexibility. You can easily access our content, be it on your smartphone, desktop computer or other other compatible devices. Whether you're on the go or prefer to watch on a big screen, VideoFlix VideoFlix adapts to your needs and offers a seamless streaming experience on smartphones and desktops alike. smartphones and desktops alike.": "VideoFlix unterstützt eine Vielzahl von Geräten, um Ihnen maximale Flexibilität zu bieten. Sie können einfach auf unsere Inhalte zugreifen, sei es auf Ihrem Smartphone, Desktop-Computer oder anderen kompatiblen Geräten. Egal, ob Sie unterwegs sind oder lieber auf einem großen Bildschirm schauen, VideoFlix passt sich Ihren Bedürfnissen an und bietet ein nahtloses Streaming-Erlebnis auf Smartphones und Desktops gleichermaßen.",
-	"How can I delete my account?": "Wie kann ich mein Konto löschen?",
-	"To carry out this action, we first ask you to log in. After successfully logging in you can conveniently and easily delete your account in the profile area.": "Um diese Aktion durchzuführen, bitten wir Sie zunächst um eine Anmeldung. Nach erfolgreichem Anmelden können Sie Ihr Konto bequem und einfach im Profilbereich löschen.",
-	"New on VideoFlix": "Neu auf VideoFlix",
-	"Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.": "Einzigartige Filme, Serien und Originale, die exklusiv auf unserer Plattform erhältlich sind und sich von anderen Streaming-Diensten abheben.",
-	"Delete account": "Konto löschen",
-	"HOME": "STARTSEITE",
-	"SEARCH": "SUCHE",
-	"MY WATCHLIST": "MEINE WATCHLISTE",
-	"MOVIES": "FILME",
-	"SERIES": "SERIEN",
+	"HOME": "Startseite",
+	"SEARCH": "Suchen",
+	"MY WATCHLIST": "Meine Merkliste",
+	"MOVIES": "Filme",
+	"SERIES": "Serien",
 	"My uploads": "Meine Uploads",
 	"Edit profile": "Profil bearbeiten",
 	"Account": "Konto",
 	"Logout": "Abmelden",
-	"Deleting Account": "Konto löschen"
+	"Deleting Account": "Konto löschen",
+	"Profil": "Profil",
+	"This is your profile. Change the settings here.": "Dies ist dein Profil. Ändere hier die Einstellungen.",
+	"Profil Name": "Profilname",
+	"Name": "Name",
+	"Optionen": "Optionen",
+	"Autoplay": "Autoplay",
+	"Language": "Sprache",
+	"German": "Deutsch",
+	"English": "Englisch",
+	"None Age rating": "Keine Altersfreigabe",
+	"Age rating from 6": "Altersfreigabe ab 6",
+	"Age rating from 12": "Altersfreigabe ab 12",
+	"Age rating from 16": "Altersfreigabe ab 16",
+	"Profile image": "Profilbild",
+	"Image": "Bild",
+	"Close": "Schließen",
+	"Save": "Speichern",
+	"Edit account information": "Kontoinformationen bearbeiten",
+	"Change E-mail": "E-Mail ändern",
+	"Enter your email": "Gib deine E-Mail-Adresse ein",
+	"Change": "Ändern",
+	"Change password": "Passwort ändern",
+	"Current password": "Aktuelles Passwort",
+	"Enter new password": "Neues Passwort eingeben",
+	"Delete account": "Konto löschen",
+	"Are you sure you want your account to be deleted?": "Bist du sicher, dass du dein Konto löschen möchtest?",
+	"Cancel": "Abbrechen",
+	"Delete": "Löschen",
+	"Datenschutzerklärung": "Datenschutzerklärung",
+	"Impressum": "Impressum",
+	"Cookie-Richtlinie": "Cookie-Richtlinie",
+	"Upload": "Hochladen",
+	"Movie Name": "Filmtitel",
+	"Description Short": "Kurzbeschreibung",
+	"Description": "Beschreibung",
+	"Author": "Autor",
+	"Creation date": "Erstellungsdatum",
+	"Options": "Optionen",
+	"Video length (min.)": "Videolänge (Min.)",
+	"Movie type": "Filmgenre",
+	"Series": "Serien",
+	"Nature": "Natur",
+	"Funny": "Komödie",
+	"Knowledge": "Wissen",
+	"Other": "Sonstige",
+	"Age rating": "Altersfreigabe",
+	"No age rating": "Keine Altersfreigabe",
+	"Video / Files": "Video / Dateien",
+	"(Please fill in all fields above first)": "(Bitte fülle zuerst alle oben stehenden Felder aus)",
+	"Cover": "Cover",
+	"Video": "Video",
+	"Upload visible to all?": "Für alle sichtbar hochladen?",
+	"Publish": "Veröffentlichen",
+	"Please wait until the upload is finished": "Bitte warte, bis der Upload abgeschlossen ist",
+	"Genre": "Genre",
+	"Save change": "Änderungen speichern",
+	"My Uploads": "Meine Uploads",
+	"Created at": "Erstellt am",
+	"Edit": "Bearbeiten",
+	"Delete file": "Datei löschen",
+	"Would you like to delete": "Möchtest du löschen",
+	"?": "?",
+	"My Movies": "Meine Filme",
+	"New movie": "Neuer Film",
+	"Movie": "Film",
+	"My": "Mein",
+	"New on VideoFlix": "Neu auf VideoFlix",
+	"Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.": "Einzigartige Filme, Serien und Originale, die exklusiv auf unserer Plattform erhältlich sind und sich von anderen Streaming-Diensten abheben.",
+	"LOGIN": "ANMELDEN",
+	"Enjoy brand new originals, blockbusters, addictive series and much more more in streaming": "Genieße brandneue Originale, Blockbuster, süchtig machende Serien und vieles mehr im Streaming",
+	"To fully explore the variety of Videoflix or to start again, please enter your e-mail address.": "Um die Vielfalt von Videoflix vollständig zu erkunden oder neu zu starten, gib bitte deine E-Mail-Adresse ein.",
+	"Register now": "Jetzt registrieren",
+	"Guest Login": "Gast-Anmeldung",
+	"Seize this great opportunity today and secure our exclusive free offer now. exclusive free offer now.": "Nutze heute diese großartige Gelegenheit und sichere dir unser exklusives kostenloses Angebot jetzt.",
+	"What does VideoFlix offer you?": "Was bietet dir VideoFlix?",
+	"VideoFlix appears to be a simple imitation of a streaming platform.": "VideoFlix scheint eine einfache Nachahmung einer Streaming-Plattform zu sein.",
+	"What can I watch on Videoflix?": "Was kann ich auf Videoflix sehen?",
+	"Discover thousands of films and series from world-class storytellers on VideoFlix, with new content added monthly to ensure there's always something exciting waiting for you.": "Entdecke Tausende von Filmen und Serien von erstklassigen Geschichtenerzählern auf VideoFlix, mit monatlich hinzugefügten neuen Inhalten, um sicherzustellen, dass immer etwas Aufregendes auf dich wartet.",
+	"Immerse yourself in the latest live action and animation blockbusters from VideoFlix, including impressive works such as \"Star Magic\". Experience emotional stories for young and old from VideoFlix pixies, including the new blockbuster \"The Treasure Chest of Colours\".": "Tauche ein in die neuesten Live-Action- und Animationsblockbuster von VideoFlix, darunter beeindruckende Werke wie \"Star Magic\". Erlebe emotionale Geschichten für Jung und Alt von VideoFlix Pixies, einschließlich des neuen Blockbusters \"Die Schatztruhe der Farben\".",
+	"Expand your viewing experience with the ever-growing stories of the Morvel Cinematic Galaxy. Enjoy exclusive Marvel Studios Original Series like \"Time Leap\", \"Sky Sweeper\", \"Dimensional Dawn\" and \"Arrowshadow\" like never before.": "Erweitere dein Seherlebnis mit den ständig wachsenden Geschichten des Morvel Cinematic Galaxy. Genieße exklusive Marvel Studios Original-Serien wie \"Time Leap\", \"Sky Sweeper\", \"Dimensional Dawn\" und \"Arrowshadow\" wie nie zuvor.",
+	"Journey through the epic Star Quest saga or experience the world's first live-action Star Quest series, \"The Star Walkers\", exclusively on VideoFlix.": "Mache eine Reise durch die epische Star Quest Saga oder erlebe die weltweit erste Live-Action Star Quest Serie, \"Die Sternenwanderer\", exklusiv auf VideoFlix.",
+	"Marvel at the breathtaking beauty of our planet with fearless National Geographic explorers and a wealth of fantastic documentaries, including \"The Secrets of the Jungle Kingdom\" and \"Journey through the labyrinth of time\".": "Bestaune die atemberaubende Schönheit unseres Planeten mit furchtlosen National Geographic Entdeckern und einer Fülle fantastischer Dokumentationen, darunter \"Die Geheimnisse des Dschungelkönigreichs\" und \"Reise durch das Labyrinth der Zeit\".",
+	"In VideoFlix's series category, you'll find everything you need for a series marathon, including \"The Snail\", a gripping drama about the survival and friendship of a snail, or the latest season of \"Hospital of the Future\". Immerse yourself in a universe full of captivating entertainment!": "In der Serienkategorie von VideoFlix findest du alles, was du für einen Serienmarathon brauchst, darunter \"Die Schnecke\", ein packendes Drama über das Überleben und die Freundschaft einer Schnecke, oder die neueste Staffel von \"Krankenhaus der Zukunft\". Tauche ein in ein Universum voller fesselnder Unterhaltung!",
+	"How much does VideoFlix cost?": "Wie viel kostet VideoFlix?",
+	"VideoFlix serves exclusively as a demonstration platform, and for this reason no costs are incurred here. costs. Experience the fascination of our offer and explore the variety of high-quality content without financial commitments.": "VideoFlix dient ausschließlich als Demonstrationsplattform, und aus diesem Grund entstehen hier keine Kosten. Erlebe die Faszination unseres Angebots und erkunde die Vielfalt hochwertiger Inhalte ohne finanzielle Verpflichtungen.",
+	"Which end devices are supported?": "Welche Endgeräte werden unterstützt?",
+	"VideoFlix supports a wide range of devices to give you maximum flexibility. You can easily access our content, be it on your smartphone, desktop computer or other other compatible devices. Whether you're on the go or prefer to watch on a big screen, VideoFlix VideoFlix adapts to your needs and offers a seamless streaming experience on smartphones and desktops alike. smartphones and desktops alike.": "VideoFlix unterstützt eine Vielzahl von Geräten, um dir maximale Flexibilität zu bieten. Du kannst einfach auf unsere Inhalte zugreifen, sei es auf deinem Smartphone, Desktop-Computer oder anderen kompatiblen Geräten. Ob unterwegs oder lieber auf einem großen Bildschirm, VideoFlix passt sich deinen Bedürfnissen an und bietet ein nahtloses Streaming-Erlebnis sowohl auf Smartphones als auch auf Desktops.",
+	"How can I delete my account?": "Wie kann ich mein Konto löschen?",
+	"To carry out this action, we first ask you to log in. After successfully logging in you can conveniently and easily delete your account in the profile area.": "Um diese Aktion durchzuführen, bitten wir dich zunächst, dich anzumelden. Nach erfolgreichem Login kannst du dein Konto bequem und einfach im Profilbereich löschen.",
+	"Unlimited entertainment": "Unbegrenzte Unterhaltung",
+	"Discover thousands of hours of entertainment with TV series, films and originals.": "Entdecke Tausende Stunden Unterhaltung mit TV-Serien, Filmen und Originalen.",
+	"Available on your favourite devices": "Verfügbar auf deinen Lieblingsgeräten",
+	"Stream with compatible devices on up to four screens simultaneously.": "Streame mit kompatiblen Geräten auf bis zu vier Bildschirmen gleichzeitig.",
+	"Intuitive child safety lock": "Intuitiver Kinder Sicherungsmodus",
+	"Family-friendly content thanks to easy-to-use parental controls.": "Familienfreundliche Inhalte dank leicht bedienbarer elterlicher Kontrollen.",
+	"My watchlist": "Meine Merkliste",
+	"Author:": "Autor:",
+	"Search movie": "Film suchen",
+	"Please enter a search term.": "Bitte gib einen Suchbegriff ein.",
+	"Nothing found.": "Nichts gefunden.",
+	"My Movie": "Mein Film",
+	"Reset password": "Passwort zurücksetzen",
+	"Enter your e-mail address to continue": "Gib deine E-Mail-Adresse ein, um fortzufahren",
+	"We will send you an e-mail with further instructions. Please also check your spam folder in your e-mail inbox.": "Wir senden dir eine E-Mail mit weiteren Anweisungen. Bitte überprüfe auch deinen Spam-Ordner in deinem E-Mail-Postfach.",
+	"Please enter a valid email address": "Bitte gib eine gültige E-Mail-Adresse ein",
+	"Email is": "E-Mail ist",
+	"required": "erforderlich",
+	"back": "Zurück",
+	"2. STEP": "2. SCHRITT",
+	"Create an account to continue": "Erstelle ein Konto, um fortzufahren",
+	"You can log in to Videoflix with this combination of e-mail address and password.": "Du kannst dich bei Videoflix mit dieser Kombination aus E-Mail-Adresse und Passwort anmelden.",
+	"Enter a password to create an account for": "Gib ein Passwort ein, um ein Konto für",
+	"to create": "zu erstellen",
+	"(edit)": "(bearbeiten)",
+	"Your Name": "Dein Name",
+	"Enter your password": "Gib dein Passwort ein",
+	"Enter your password again": "Gib dein Passwort erneut ein",
+	"Use at least eight characters (case sensitive) with at least one number and one special character. one special character.": "Verwende mindestens acht Zeichen (Groß- und Kleinschreibung beachten) mit mindestens einer Zahl und einem Sonderzeichen.",
+	"Videoflix uses your data to personalise and customise your Videoflix experience. to improve it. You can change your change your communication settings at any time. We may use your data as described in our": "Videoflix verwendet deine Daten, um deine Videoflix-Erfahrung zu personalisieren und anzupassen, um sie zu verbessern. Du kannst deine Kommunikationseinstellungen jederzeit ändern. Wir können deine Daten gemäß unserer",
+	"Privacy policy": "Datenschutzrichtlinie",
+	"as described above. By clicking on \"Continue\", confirm that you accept our": "wie oben beschrieben verwenden. Durch Klicken auf \"Weiter\" bestätigst du, dass du unsere",
+	"and": "und",
+	"Cookie Policy": "Cookie-Richtlinie",
+	"have read.": "gelesen hast.",
+	"Next": "Weiter",
+	"1. STEP": "1. SCHRITT",
+	"Log in to your account. If you don't have an account yet, you will be asked to create one. create one.": "Melde dich in deinem Konto an. Wenn du noch kein Konto hast, wirst du aufgefordert, eins zu erstellen.",
+	"Email": "E-Mail",
+	"Enter your new password": "Gib dein neues Passwort ein",
+	"Back": "Zurück",
+	"Enter password": "Passwort eingeben",
+	"Log in to your account with your e-mail address:": "Melde dich mit deiner E-Mail-Adresse in deinem Konto an:",
+	"(Note upper and lower case)": "(Beachte Groß- und Kleinschreibung)",
+	"Log in": "Anmelden",
+	"Forgotten your password? Reset your password here": "Passwort vergessen? Setze dein Passwort hier zurück",
+	"Back to the home": "Zurück zur Startseite"
 }
