--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,20 +1,88 @@
 {
-	"Back to the home": "Back to the home",
-	"2. STEP": "2. STEP",
-	"Enter password": "Enter password",
-	"Log in to your account with your e-mail address:": "Log in to your account with your e-mail address:",
-	"(edit)": "(edit)",
-	"Enter your password": "Enter your password",
-	"(Note upper and lower case)": "(Note upper and lower case)",
-	"Log in": "Log in",
-	"Forgotten your password? Reset your password here": "Forgotten your password? Reset your password here",
-	"Filme": "Filme",
-	"Unlimited entertainment": "Unlimited entertainment",
-	"Discover thousands of hours of entertainment with TV series, films and originals.": "Discover thousands of hours of entertainment with TV series, films and originals.",
-	"Available on your favourite devices": "Available on your favourite devices",
-	"Stream with compatible devices on up to four screens simultaneously.": "Stream with compatible devices on up to four screens simultaneously.",
-	"Intuitive child safety lock": "Intuitive child safety lock",
-	"Family-friendly content thanks to easy-to-use parental controls.": "Family-friendly content thanks to easy-to-use parental controls.",
+	"HOME": "HOME",
+	"SEARCH": "SEARCH",
+	"MY WATCHLIST": "MY WATCHLIST",
+	"MOVIES": "MOVIES",
+	"SERIES": "SERIES",
+	"My uploads": "My uploads",
+	"Edit profile": "Edit profile",
+	"Account": "Account",
+	"Logout": "Logout",
+	"Deleting Account": "Deleting Account",
+	"Profil": "Profil",
+	"This is your profile. Change the settings here.": "This is your profile. Change the settings here.",
+	"Profil Name": "Profil Name",
+	"Name": "Name",
+	"Optionen": "Optionen",
+	"Autoplay": "Autoplay",
+	"Language": "Language",
+	"German": "German",
+	"English": "English",
+	"None Age rating": "None Age rating",
+	"Age rating from 6": "Age rating from 6",
+	"Age rating from 12": "Age rating from 12",
+	"Age rating from 16": "Age rating from 16",
+	"Profile image": "Profile image",
+	"Image": "Image",
+	"Close": "Close",
+	"Save": "Save",
+	"Edit account information": "Edit account information",
+	"Change E-mail": "Change E-mail",
+	"Enter your email": "Enter your email",
+	"Change": "Change",
+	"Change password": "Change password",
+	"Current password": "Current password",
+	"Enter new password": "Enter new password",
+	"Delete account": "Delete account",
+	"Are you sure you want your account to be deleted?": "Are you sure you want your account to be deleted?",
+	"Cancel": "Cancel",
+	"Delete": "Delete",
+	"Datenschutzerklärung": "Datenschutzerklärung",
+	"Impressum": "Impressum",
+	"Cookie-Richtlinie": "Cookie-Richtlinie",
+	"Upload": "Upload",
+	"Movie Name": "Movie Name",
+	"Description Short": "Description Short",
+	"Description": "Description",
+	"Author": "Author",
+	"Creation date": "Creation date",
+	"Options": "Options",
+	"Video length (min.)": "Video length (min.)",
+	"Movie type": "Movie type",
+	"Series": "Series",
+	"Nature": "Nature",
+	"Funny": "Funny",
+	"Knowledge": "Knowledge",
+	"Other": "Other",
+	"Age rating": "Age rating",
+	"No age rating": "No age rating",
+	"Video / Files": "Video / Files",
+	"(Please fill in all fields above first)": "(Please fill in all fields above first)",
+	"Cover": "Cover",
+	"Video": "Video",
+	"Upload visible to all?": "Upload visible to all?",
+	"Publish": "Publish",
+	"Please wait until the upload is finished": "Please wait until the upload is finished",
+	"Genre": "Genre",
+	"Save change": "Save change",
+	"My Uploads": "My Uploads",
+	"Created at": "Created at",
+	"Edit": "Edit",
+	"Delete file": "Delete file",
+	"Would you like to delete": "Would you like to delete",
+	"?": "?",
+	"My Movies": "My Movies",
+	"New movie": "New movie",
+	"Movie": "Movie",
+	"My": "My",
+	"New on VideoFlix": "New on VideoFlix",
+	"Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.": "Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.",
+	"LOGIN": "LOGIN",
+	"Enjoy brand new originals, blockbusters, addictive series and much more more in streaming": "Enjoy brand new originals, blockbusters, addictive series and much more more in streaming",
+	"To fully explore the variety of Videoflix or to start again, please enter your e-mail address.": "To fully explore the variety of Videoflix or to start again, please enter your e-mail address.",
+	"Register now": "Register now",
+	"Guest Login": "Guest Login",
+	"Seize this great opportunity today and secure our exclusive free offer now. exclusive free offer now.": "Seize this great opportunity today and secure our exclusive free offer now. exclusive free offer now.",
 	"What does VideoFlix offer you?": "What does VideoFlix offer you?",
 	"VideoFlix appears to be a simple imitation of a streaming platform.": "VideoFlix appears to be a simple imitation of a streaming platform.",
 	"What can I watch on Videoflix?": "What can I watch on Videoflix?",
@@ -30,17 +98,51 @@
 	"VideoFlix supports a wide range of devices to give you maximum flexibility. You can easily access our content, be it on your smartphone, desktop computer or other other compatible devices. Whether you're on the go or prefer to watch on a big screen, VideoFlix VideoFlix adapts to your needs and offers a seamless streaming experience on smartphones and desktops alike. smartphones and desktops alike.": "VideoFlix supports a wide range of devices to give you maximum flexibility. You can easily access our content, be it on your smartphone, desktop computer or other other compatible devices. Whether you're on the go or prefer to watch on a big screen, VideoFlix VideoFlix adapts to your needs and offers a seamless streaming experience on smartphones and desktops alike. smartphones and desktops alike.",
 	"How can I delete my account?": "How can I delete my account?",
 	"To carry out this action, we first ask you to log in. After successfully logging in you can conveniently and easily delete your account in the profile area.": "To carry out this action, we first ask you to log in. After successfully logging in you can conveniently and easily delete your account in the profile area.",
-	"New on VideoFlix": "New on VideoFlix",
-	"Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.": "Unique films, series and originals that are exclusively available on our platform and stand out from other streaming services. streaming services.",
-	"Delete account": "Delete account",
-	"HOME": "HOME",
-	"SEARCH": "SEARCH",
-	"MY WATCHLIST": "MY WATCHLIST",
-	"MOVIES": "MOVIES",
-	"SERIES": "SERIES",
-	"My uploads": "My uploads",
-	"Edit profile": "Edit profile",
-	"Account": "Account",
-	"Logout": "Logout",
-	"Deleting Account": "Deleting Account"
+	"Unlimited entertainment": "Unlimited entertainment",
+	"Discover thousands of hours of entertainment with TV series, films and originals.": "Discover thousands of hours of entertainment with TV series, films and originals.",
+	"Available on your favourite devices": "Available on your favourite devices",
+	"Stream with compatible devices on up to four screens simultaneously.": "Stream with compatible devices on up to four screens simultaneously.",
+	"Intuitive child safety lock": "Intuitive child safety lock",
+	"Family-friendly content thanks to easy-to-use parental controls.": "Family-friendly content thanks to easy-to-use parental controls.",
+	"My watchlist": "My watchlist",
+	"Author:": "Author:",
+	"Search movie": "Search movie",
+	"Please enter a search term.": "Please enter a search term.",
+	"Nothing found.": "Nothing found.",
+	"My Movie": "My Movie",
+	"Reset password": "Reset password",
+	"Enter your e-mail address to continue": "Enter your e-mail address to continue",
+	"We will send you an e-mail with further instructions. Please also check your spam folder in your e-mail inbox.": "We will send you an e-mail with further instructions. Please also check your spam folder in your e-mail inbox.",
+	"Please enter a valid email address": "Please enter a valid email address",
+	"Email is": "Email is",
+	"required": "required",
+	"back": "back",
+	"2. STEP": "2. STEP",
+	"Create an account to continue": "Create an account to continue",
+	"You can log in to Videoflix with this combination of e-mail address and password.": "You can log in to Videoflix with this combination of e-mail address and password.",
+	"Enter a password to create an account for": "Enter a password to create an account for",
+	"to create": "to create",
+	"(edit)": "(edit)",
+	"Your Name": "Your Name",
+	"Enter your password": "Enter your password",
+	"Enter your password again": "Enter your password again",
+	"Use at least eight characters (case sensitive) with at least one number and one special character. one special character.": "Use at least eight characters (case sensitive) with at least one number and one special character. one special character.",
+	"Videoflix uses your data to personalise and customise your Videoflix experience. to improve it. You can change your change your communication settings at any time. We may use your data as described in our": "Videoflix uses your data to personalise and customise your Videoflix experience. to improve it. You can change your change your communication settings at any time. We may use your data as described in our",
+	"Privacy policy": "Privacy policy",
+	"as described above. By clicking on \"Continue\", confirm that you accept our": "as described above. By clicking on \"Continue\", confirm that you accept our",
+	"and": "and",
+	"Cookie Policy": "Cookie Policy",
+	"have read.": "have read.",
+	"Next": "Next",
+	"1. STEP": "1. STEP",
+	"Log in to your account. If you don't have an account yet, you will be asked to create one. create one.": "Log in to your account. If you don't have an account yet, you will be asked to create one. create one.",
+	"Email": "Email",
+	"Enter your new password": "Enter your new password",
+	"Back": "Back",
+	"Enter password": "Enter password",
+	"Log in to your account with your e-mail address:": "Log in to your account with your e-mail address:",
+	"(Note upper and lower case)": "(Note upper and lower case)",
+	"Log in": "Log in",
+	"Forgotten your password? Reset your password here": "Forgotten your password? Reset your password here",
+	"Back to the home": "Back to the home"
 }
